bugfix: stopped output lagging behind input by 1 char | fixed submit button

--- a/src/Components/css/ScoreBar.css
+++ b/src/Components/css/ScoreBar.css
@@ -5,4 +5,5 @@
 
 #progress{
     margin-bottom: 10px;
+    background-color: #b3b3b3;
 }
